<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_info_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_margin="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/info_text"
        android:orientation="vertical">

        <EditText
            android:id="@+id/First_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/first_name_hint"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:textColor="@color/white"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/Surname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/surname_hint"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:textColor="@color/white"
            android:layout_margin="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dob"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/date_of_birth_title"
                android:textColor="@color/white"
                android:layout_margin="16dp"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/date_day"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/day"
                android:textColorHint="@color/white"
                android:inputType="date"
                android:maxLength="2"
                android:autofillHints=""
                android:ems="2"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:textColor="@color/white"
                android:text="@string/date_dash"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_margin="8dp"/>

            <EditText
                android:id="@+id/date_month"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/month"
                android:textColorHint="@color/white"
                android:inputType="date"
                android:maxLength="2"
                android:autofillHints=""
                android:ems="2"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:textColor="@color/white"
                android:text="@string/date_dash"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_margin="8dp"/>

            <EditText
                android:id="@+id/date_year"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/year"
                android:textColorHint="@color/white"
                android:inputType="date"
                android:maxLength="4"
                android:autofillHints=""
                android:ems="4"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Height"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/height_hint"
                android:textColorHint="@color/white"
                android:inputType="number"
                android:maxLength="5"
                android:autofillHints=""
                android:ems="6"
                android:textColor="@color/white"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/metric_height"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:textColor="@color/white"
                android:text="@string/Centimetres"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Weight"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/weight_hint"
                android:textColorHint="@color/white"
                android:inputType="number"
                android:maxLength="5"
                android:autofillHints=""
                android:ems="6"
                android:textColor="@color/white"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/metric_weight"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:textColor="@color/white"
                android:text="@string/Kilograms"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
