<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="@color/button_bar">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:gravity="center"
       android:text="@string/change_email_address"
       android:textSize="24sp"
       android:textColor="@color/white"
       android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/old_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/old_email_address"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:autofillHints=""
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/passwordTextHint"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:autofillHints=""
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"/>

    <EditText
        android:id="@+id/new_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/new_email_address"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:autofillHints=""
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"/>


</LinearLayout>