<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background_tint"
    tools:context=".GoalsAndChallengesActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/stats_top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/button_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/statistics_upper_bar_layout"
        app:titleTextColor="@android:color/white"
        app:title="Statistics"
        app:titleCentered="true"/>

    <LinearLayout
        android:id="@+id/pager_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/swap_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_top_toolbar">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/swap_bar"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/goals_bottom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pager_layout">

        <Button
            android:id="@+id/left"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/left_arrow"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/stat_placeholder"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/right"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/right_arrow"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/goals_bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/button_bar"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/button_bar"
            android:contentDescription="@string/home_screen_button"
            android:src="@drawable/ic_home_black"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/statistics_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/button_bar"
            android:contentDescription="@string/statistics_button"
            android:src="@drawable/ic_statistics_white"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/goals_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/button_bar"
            android:contentDescription="@string/goals_button"
            android:src="@drawable/ic_goals_black"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/competition_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/button_bar"
            android:contentDescription="@string/competition_button"
            android:src="@drawable/ic_competition_black"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>