<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/button_bar">

    <TextView
        android:id="@+id/Goal_creation_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_goal_text_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_margin="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Goal_creation_text"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/goal_title_hint"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:textColor="@color/white"
            android:layout_margin="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Goal"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/goal_field"
                android:textColorHint="@color/white"
                android:inputType="number"
                android:maxLength="5"
                android:autofillHints=""
                android:ems="6"
                android:textColor="@color/white"
                android:layout_margin="16dp"/>

            <Spinner
                android:id="@+id/dropdown"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:entries="@array/metrics"
                android:background="@color/Light_gray"
                android:popupBackground="@color/Light_gray"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
